added version finder removed bukkit support cause :3 redid url connection a little