@@ -1,9 +1,7 @@
 package gay;
 
 import java.io.*;
-import java.net.HttpURLConnection;
-import java.net.URI;
-import java.net.URL;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.util.Scanner;
 import com.google.gson.Gson;
@@ -26,35 +24,53 @@ public class Main {
                 modLoader = line.replace("Main-Class: ", "").trim();
 
         modLoader = switch (modLoader) {
-            case "net.fabricmc.installer.ServerLauncher" -> "Fabric";
-            case "io.papermc.paperclip.Main" -> "Paper";
-            case "org.bukkit.craftbukkit.bootstrap.Main" -> "Bukkit";
-            case "net.minecraftforge.bootstrap.shim.Main" -> "Forge";
-            default -> "Could Not Find Mod Loader";
+            case "net.fabricmc.installer.ServerLauncher" -> "fabric";
+            case "io.papermc.paperclip.Main" -> "paper";
+            case "net.minecraftforge.bootstrap.shim.Main" -> "forge";
+            default -> "Could Not Find Mod Loader\nPlease use Purpur/Fabric/Forge";
         };
-        
-        
         System.out.println("ModLoader: " + modLoader);
+        
+        //Version finder\
+        String version = "";
+        switch (modLoader) {
+            case "paper" -> {
+                InputStream stream = ServerJarArchive.getInputStream(ServerJarArchive.getEntry("version.json"));
+                version = new Gson().fromJson(new String(stream.readAllBytes(), StandardCharsets.UTF_8), Version.class).id;
 
-        /*        InputStream stream = ServerJarArchive.getInputStream(ServerJarArchive.getEntry("version.json"));
-        System.out.println(new String(stream.readAllBytes(), StandardCharsets.UTF_8));*/
+            }
+            case "fabric" -> {
+                InputStream stream = ServerJarArchive.getInputStream(ServerJarArchive.getEntry("install.properties"));
+                String fabricFileText = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
+                for (String line : fabricFileText.split("\n"))
+                    if (line.startsWith("game-version="))
+                        version = line.replace("game-version=", "").trim();
 
+            }
+            case "forge" -> {
+                System.out.println("You are using Forge Mod Loader, Minecraft version cannot be automatically determined\nPlease enter the Minecraft version:");
+                version = scanner.nextLine();
+            }
+        }
+        System.out.println("version: " + version);
+        
+        
+        //
         //noinspection InfiniteLoopStatement
-        do {
+        while (true) {
             System.out.println("What mod are you looking for?:");
-            URL url = URI.create("https://api.modrinth.com/v2/search?query=" + scanner.nextLine()).toURL();
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.connect();
-            InputStream meowmeowsillykittycatmrrrp = connection.getInputStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(meowmeowsillykittycatmrrrp));
-            String line = reader.readLine();
-            reader.close();
-            connection.disconnect();
+            
+            URLConnection connection = new URL("https://api.modrinth.com/v2/search?query=" + scanner.nextLine() + 
+                    "&facets=" + URLEncoder.encode("[[\"categories:" + modLoader + "\"],[\"versions:" + version + "\"]]", StandardCharsets.UTF_8))
+                    .openConnection();
+            connection.setRequestProperty("Accept-Charset", "UTF-8");
+            InputStream response = connection.getInputStream();
+            String responsetext = new String(response.readAllBytes(), StandardCharsets.UTF_8);
+            response.close();
 
-            SearchResult result = new Gson().fromJson(line, SearchResult.class);
+            SearchResult result = new Gson().fromJson(responsetext, SearchResult.class);
             for (Hit hit : result.hits)
                 System.out.println(hit.title + "   " + hit.author);
-        } while (true);
+        }
     }
 }
